@@ -4,13 +4,13 @@ import java.io.IOException;
 
 import edu.colorado.phet.common.phetcommon.resources.PhetVersion;
 
-public class ConsoleUpdateView implements UpdateManager.Listener {
+public class ConsoleUpdateView implements UpdateManager.UpdateListener {
     public void discoveredRemoteVersion( PhetVersion remoteVersion ) {
         System.out.println( "ConsoleViewForUpdates.discoveredRemoteVersion: " + remoteVersion );
     }
 
-    public void newVersionAvailable( PhetVersion currentVersion, PhetVersion remoteVersion ) {
-        System.out.println( "ConsoleViewForUpdates.newVersionAvailable: currentVersion=" + currentVersion + ", remoteVersion=" + remoteVersion );
+    public void updateAvailable( PhetVersion currentVersion, PhetVersion remoteVersion ) {
+        System.out.println( "ConsoleViewForUpdates.updateAvailable: currentVersion=" + currentVersion + ", remoteVersion=" + remoteVersion );
     }
 
     public void exceptionInUpdateCheck( IOException e ) {
@@ -18,7 +18,7 @@ public class ConsoleUpdateView implements UpdateManager.Listener {
         e.printStackTrace();
     }
 
-    public void noNewVersionAvailable( PhetVersion currentVersion, PhetVersion remoteVersion ) {
-        System.out.println( "ConsoleViewForUpdates.noNewVersionAvailable: currentVersion=" + currentVersion + ", remoteVersion=" + remoteVersion );
+    public void noUpdateAvailable( PhetVersion currentVersion, PhetVersion remoteVersion ) {
+        System.out.println( "ConsoleViewForUpdates.noUpdateAvailable: currentVersion=" + currentVersion + ", remoteVersion=" + remoteVersion );
     }
 }
